# ADS

./: .gitignore  CMakeLists.txt  README.md  meson.build
.github/workflows/: build-package-linux.yml  build-package-windows.yml  build.yml
AdsLib/: CMakeLists.txt
cmake/: Config.cmake.in  FindTwinCAT.cmake  Package.cmake
example/: CMakeLists.txt
